--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -187,7 +187,7 @@ time, mark, audio, video {
     @extend %img-full;
     margin: 0;
 }
-.media {
+.single-design .media {
     @extend %boxShadow;
     border: 1px solid black;
 }
