--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -246,111 +246,98 @@ article {
 }
 
 /* line 66, ../scss/_overrides.scss */
-.modal {
-  top: 10%;
-}
-
-/* line 69, ../scss/_overrides.scss */
 .page-header {
   border: 0;
   margin: 20px 0 0;
   padding-bottom: 0;
 }
 
-/* line 74, ../scss/_overrides.scss */
+/* line 71, ../scss/_overrides.scss */
 .post {
   margin: 0 0 40px 0;
 }
 
-/* line 77, ../scss/_overrides.scss */
+/* line 74, ../scss/_overrides.scss */
 .entry-meta {
   margin-bottom: 20px;
   line-height: 150%;
 }
 
-/* line 82, ../scss/_overrides.scss */
+/* line 78, ../scss/_overrides.scss */
 .main-content {
-  padding: 80px 0 30px 0;
+  padding-top: 80px;
 }
 @media only all and (max-width: 1199px) {
-  /* line 82, ../scss/_overrides.scss */
+  /* line 78, ../scss/_overrides.scss */
   .main-content {
     padding-top: 70px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 82, ../scss/_overrides.scss */
+  /* line 78, ../scss/_overrides.scss */
   .main-content {
     padding-top: 60px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 82, ../scss/_overrides.scss */
+  /* line 78, ../scss/_overrides.scss */
   .main-content {
     padding-top: 60px;
   }
 }
 
-/* line 95, ../scss/_overrides.scss */
-.main-content-inner {
-  /* ul {
-      list-style: circle;
-      margin-left: 27px;
-  } */
-}
-
-/* line 104, ../scss/_overrides.scss */
+/* line 91, ../scss/_overrides.scss */
 .content {
   margin-left: 15px;
   margin-right: 15px;
 }
 @media only all and (max-width: 767px) {
-  /* line 104, ../scss/_overrides.scss */
+  /* line 91, ../scss/_overrides.scss */
   .content {
     margin-left: 0;
     margin-right: 0;
   }
 }
 
-/* line 116, ../scss/_overrides.scss */
+/* line 103, ../scss/_overrides.scss */
 .image img {
   width: 100% !important;
   height: auto !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 113, ../scss/_overrides.scss */
+  /* line 100, ../scss/_overrides.scss */
   .image {
     width: 100%;
   }
-  /* line 123, ../scss/_overrides.scss */
+  /* line 110, ../scss/_overrides.scss */
   .image img {
     width: 100% !important;
   }
 }
 
-/* line 129, ../scss/_overrides.scss */
+/* line 116, ../scss/_overrides.scss */
 .sidebar {
   padding: 20px;
   margin-top: 20px;
   background-color: black;
 }
-/* line 135, ../scss/_overrides.scss */
+/* line 122, ../scss/_overrides.scss */
 .sidebar h3 {
   padding: 0 0 10px;
   margin: 0 !important;
 }
-/* line 139, ../scss/_overrides.scss */
+/* line 126, ../scss/_overrides.scss */
 .sidebar .nav > li > a {
   padding: 10px 0;
 }
 
-/* line 144, ../scss/_overrides.scss */
+/* line 131, ../scss/_overrides.scss */
 .row-thumbnails {
   margin-left: -15px;
   margin-right: -15px;
 }
 
-/* line 148, ../scss/_overrides.scss */
+/* line 135, ../scss/_overrides.scss */
 .thumbnail {
   min-height: 285px;
   padding: 0;
@@ -361,20 +348,20 @@ article {
   transition: all, 0s;
 }
 @media only all and (min-width: 768px) and (max-width: 991px) {
-  /* line 148, ../scss/_overrides.scss */
+  /* line 135, ../scss/_overrides.scss */
   .thumbnail {
     min-height: 250px;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 148, ../scss/_overrides.scss */
+  /* line 135, ../scss/_overrides.scss */
   .thumbnail {
     width: 100%;
     clear: both;
     min-height: 0;
   }
 }
-/* line 167, ../scss/_overrides.scss */
+/* line 154, ../scss/_overrides.scss */
 .thumbnail h3 {
   -webkit-transition: background-color, 0.5s;
   -moz-transition: background-color, 0.5s;
@@ -385,27 +372,27 @@ article {
   -o-transition: padding, 0.5s;
   transition: padding, 0.5s;
 }
-/* line 171, ../scss/_overrides.scss */
+/* line 158, ../scss/_overrides.scss */
 .thumbnail img {
   height: auto !important;
 }
 @media only all and (max-width: 767px) {
-  /* line 171, ../scss/_overrides.scss */
+  /* line 158, ../scss/_overrides.scss */
   .thumbnail img {
     width: 100% !important;
   }
 }
-/* line 179, ../scss/_overrides.scss */
+/* line 166, ../scss/_overrides.scss */
 .thumbnail .thumb-content {
   background-color: black;
 }
-/* line 183, ../scss/_overrides.scss */
+/* line 170, ../scss/_overrides.scss */
 .thumbnail .caption {
   text-align: center;
   padding: 10px 0 0 0;
 }
 @media only all and (min-width: 768px) {
-  /* line 196, ../scss/_overrides.scss */
+  /* line 183, ../scss/_overrides.scss */
   .thumbnail:hover h3 {
     background: #0074a2;
     padding-top: 20px;
@@ -418,6 +405,11 @@ article {
     -o-transition: padding, 0.2s;
     transition: padding, 0.2s;
   }
+}
+
+/* line 193, ../scss/_overrides.scss */
+.modal {
+  top: 10%;
 }
 
 /*
@@ -741,15 +733,20 @@ p {
 }
 
 /* Nav Below */
+/* line 98, ../scss/_navbar.scss */
+#nav-below .btn-primary {
+  margin-top: 10px;
+}
+
 /* Nav Prev / Next  */
-/* line 102, ../scss/_navbar.scss */
+/* line 105, ../scss/_navbar.scss */
 .nav-previous {
   float: left;
   margin-right: 20px;
 }
 
 /* Buttons */
-/* line 109, ../scss/_navbar.scss */
+/* line 112, ../scss/_navbar.scss */
 .btn-primary {
   background-color: #0074a2;
   border-color: #0074a2;
@@ -759,7 +756,7 @@ p {
   transition: background-color, 0.5s;
 }
 
-/* line 114, ../scss/_navbar.scss */
+/* line 117, ../scss/_navbar.scss */
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
   background-color: #2ea2cc;
   border-color: #2ea2cc;
@@ -770,24 +767,24 @@ p {
 }
 
 /* Affix */
-/* line 121, ../scss/_navbar.scss */
+/* line 124, ../scss/_navbar.scss */
 #home .affix {
   width: 100%;
   top: 0;
 }
 
-/* line 125, ../scss/_navbar.scss */
+/* line 128, ../scss/_navbar.scss */
 #home .affix-top {
   margin-top: -50px;
 }
 @media only all and (max-width: 767px) {
-  /* line 125, ../scss/_navbar.scss */
+  /* line 128, ../scss/_navbar.scss */
   #home .affix-top {
     margin-top: 0;
   }
 }
 
-/* line 133, ../scss/_navbar.scss */
+/* line 136, ../scss/_navbar.scss */
 #standard .affix,
 #standard .affix-top {
   width: 100%;
@@ -796,7 +793,7 @@ p {
 
 /* Responsive: Portrait mobile and below */
 @media screen and (max-width: 768px) {
-  /* line 141, ../scss/_navbar.scss */
+  /* line 144, ../scss/_navbar.scss */
   .affix-top {
     width: 100%;
     position: fixed;
@@ -805,12 +802,12 @@ p {
   }
 
   /* Logo */
-  /* line 148, ../scss/_navbar.scss */
+  /* line 151, ../scss/_navbar.scss */
   .navbar-brand {
     padding-left: 15px;
   }
 
-  /* line 151, ../scss/_navbar.scss */
+  /* line 154, ../scss/_navbar.scss */
   .navbar-collapse {
     background-color: #000;
   }
@@ -1420,21 +1417,25 @@ code, pre, .highlight {
 }
 
 /* line 178, ../scss/custom.scss */
+.entry-content p {
+  margin-bottom: 15px;
+}
+/* line 181, ../scss/custom.scss */
 .entry-content img {
   margin: 10px 0 30px;
 }
 
-/* line 183, ../scss/custom.scss */
+/* line 186, ../scss/custom.scss */
 .media, .description {
   margin-bottom: 30px;
 }
 
-/* line 186, ../scss/custom.scss */
+/* line 189, ../scss/custom.scss */
 .media img {
   margin: 0;
 }
 
-/* line 190, ../scss/custom.scss */
+/* line 193, ../scss/custom.scss */
 .single-design .media {
   border: 1px solid black;
 }
@@ -1442,7 +1443,7 @@ code, pre, .highlight {
 /*
  *  Admin Menu 
  */
-/* line 200, ../scss/custom.scss */
+/* line 203, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
@@ -1450,11 +1451,11 @@ code, pre, .highlight {
 /* 
  *  Footer
  */
-/* line 208, ../scss/custom.scss */
+/* line 211, ../scss/custom.scss */
 #root-footer, #footer {
   height: 30px;
 }
-/* line 210, ../scss/custom.scss */
+/* line 213, ../scss/custom.scss */
 #root-footer p, #footer p {
   color: #666;
 }
