--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -175,6 +175,9 @@ time, mark, audio, video {
 }
 
 .entry-content {
+    p {
+        margin-bottom: 15px;
+    }
     img {
         margin: 10px 0 30px;
     }
