--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -282,7 +282,7 @@ article {
 @media only all and (max-width: 767px) {
   /* line 78, ../scss/_overrides.scss */
   .main-content {
-    padding-top: 60px;
+    padding-top: 160px;
   }
 }
 
@@ -641,73 +641,86 @@ p {
   color: #2ea2cc;
 }
 
+/* line 24, ../scss/_navbar.scss */
+.site-navigation-inner {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+@media only all and (max-width: 767px) {
+  /* line 29, ../scss/_navbar.scss */
+  .navbar-fixed-top {
+    position: relative;
+  }
+}
+
 /* Nav */
-/* line 28, ../scss/_navbar.scss */
+/* line 38, ../scss/_navbar.scss */
 .nav > li > a {
   padding: 15px;
 }
 @media only all and (max-width: 1199px) {
-  /* line 28, ../scss/_navbar.scss */
+  /* line 38, ../scss/_navbar.scss */
   .nav > li > a {
     padding: 15px 11px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 28, ../scss/_navbar.scss */
+  /* line 38, ../scss/_navbar.scss */
   .nav > li > a {
     padding: 15px 6px 15px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 28, ../scss/_navbar.scss */
+  /* line 38, ../scss/_navbar.scss */
   .nav > li > a {
     padding: 0 0 15px 15px;
   }
 }
-/* line 40, ../scss/_navbar.scss */
+/* line 50, ../scss/_navbar.scss */
 .nav > li > a:hover, .nav > li > a:focus {
   background-color: transparent;
 }
 
 /* Navbar */
-/* line 49, ../scss/_navbar.scss */
+/* line 59, ../scss/_navbar.scss */
 .navbar {
   margin-bottom: -150px;
   font-family: "Dosis", sans-serif;
   text-transform: uppercase;
 }
-/* line 54, ../scss/_navbar.scss */
+/* line 64, ../scss/_navbar.scss */
 .navbar a {
   font-size: 15px;
   letter-spacing: 3px;
 }
 @media only all and (min-width: 768px) and (max-width: 991px) {
-  /* line 54, ../scss/_navbar.scss */
+  /* line 64, ../scss/_navbar.scss */
   .navbar a {
     font-size: 13px;
     letter-spacing: 2px;
   }
 }
-/* line 63, ../scss/_navbar.scss */
+/* line 73, ../scss/_navbar.scss */
 .navbar a.active {
   color: white !important;
 }
 
-/* line 68, ../scss/_navbar.scss */
+/* line 78, ../scss/_navbar.scss */
 .navbar-nav {
   margin: 0 0 0 -15px;
 }
 
-/* line 71, ../scss/_navbar.scss */
+/* line 81, ../scss/_navbar.scss */
 .navbar-inverse .navbar-nav > .active > a {
   background-color: transparent;
 }
-/* line 73, ../scss/_navbar.scss */
+/* line 83, ../scss/_navbar.scss */
 .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
   background-color: transparent;
 }
 
-/* line 77, ../scss/_navbar.scss */
+/* line 87, ../scss/_navbar.scss */
 .navbar-inverse {
   background-color: black;
   border: 0;
@@ -716,7 +729,7 @@ p {
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 }
 
-/* line 82, ../scss/_navbar.scss */
+/* line 92, ../scss/_navbar.scss */
 .navbar-collapse {
   -webkit-box-shadow: 0;
   -moz-box-shadow: 0;
@@ -724,7 +737,7 @@ p {
   border-top: 0;
 }
 
-/* line 87, ../scss/_navbar.scss */
+/* line 97, ../scss/_navbar.scss */
 #nav-row {
   height: 50px;
   background-color: #000;
@@ -733,20 +746,20 @@ p {
 }
 
 /* Nav Below */
-/* line 98, ../scss/_navbar.scss */
+/* line 108, ../scss/_navbar.scss */
 #nav-below .btn-primary {
   margin-top: 10px;
 }
 
 /* Nav Prev / Next  */
-/* line 105, ../scss/_navbar.scss */
+/* line 115, ../scss/_navbar.scss */
 .nav-previous {
   float: left;
   margin-right: 20px;
 }
 
 /* Buttons */
-/* line 112, ../scss/_navbar.scss */
+/* line 122, ../scss/_navbar.scss */
 .btn-primary {
   background-color: #0074a2;
   border-color: #0074a2;
@@ -756,7 +769,7 @@ p {
   transition: background-color, 0.5s;
 }
 
-/* line 117, ../scss/_navbar.scss */
+/* line 127, ../scss/_navbar.scss */
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
   background-color: #2ea2cc;
   border-color: #2ea2cc;
@@ -767,24 +780,24 @@ p {
 }
 
 /* Affix */
-/* line 124, ../scss/_navbar.scss */
+/* line 134, ../scss/_navbar.scss */
 #home .affix {
   width: 100%;
   top: 0;
 }
 
-/* line 128, ../scss/_navbar.scss */
+/* line 138, ../scss/_navbar.scss */
 #home .affix-top {
   margin-top: -50px;
 }
 @media only all and (max-width: 767px) {
-  /* line 128, ../scss/_navbar.scss */
+  /* line 138, ../scss/_navbar.scss */
   #home .affix-top {
     margin-top: 0;
   }
 }
 
-/* line 136, ../scss/_navbar.scss */
+/* line 146, ../scss/_navbar.scss */
 #standard .affix,
 #standard .affix-top {
   width: 100%;
@@ -793,7 +806,7 @@ p {
 
 /* Responsive: Portrait mobile and below */
 @media screen and (max-width: 768px) {
-  /* line 144, ../scss/_navbar.scss */
+  /* line 154, ../scss/_navbar.scss */
   .affix-top {
     width: 100%;
     position: fixed;
@@ -802,12 +815,12 @@ p {
   }
 
   /* Logo */
-  /* line 151, ../scss/_navbar.scss */
+  /* line 161, ../scss/_navbar.scss */
   .navbar-brand {
     padding-left: 15px;
   }
 
-  /* line 154, ../scss/_navbar.scss */
+  /* line 164, ../scss/_navbar.scss */
   .navbar-collapse {
     background-color: #000;
   }
