--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -21,6 +21,16 @@
     color: $cyan;
 }
 
+.site-navigation-inner {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.navbar-fixed-top {
+    @include max_tablet{
+        position: relative;
+    }
+}
 
 
 /* Nav */
