--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -220,124 +220,130 @@ time {
   color: #999;
 }
 
-/* line 49, ../scss/_overrides.scss */
+/* line 46, ../scss/_overrides.scss */
+table {
+  border-spacing: 0;
+  border-color: transparent;
+}
+
+/* line 53, ../scss/_overrides.scss */
 body {
   overflow-x: hidden;
   background-color: #00364b;
   background: url('/wp-content/themes/jn-wpbs/assets/img/bg/stripes.png?1385804855') black fixed;
 }
 
-/* line 54, ../scss/_overrides.scss */
+/* line 58, ../scss/_overrides.scss */
 article {
   padding-left: 0 !important;
 }
 
-/* line 57, ../scss/_overrides.scss */
+/* line 61, ../scss/_overrides.scss */
 .row {
   margin-left: 0;
   margin-right: 0;
 }
 
 @media only all and (max-width: 767px) {
-  /* line 61, ../scss/_overrides.scss */
+  /* line 65, ../scss/_overrides.scss */
   .container {
     padding: 0 25px 5px;
   }
 }
 
-/* line 66, ../scss/_overrides.scss */
+/* line 70, ../scss/_overrides.scss */
 .page-header {
   border: 0;
   margin: 20px 0 0;
   padding-bottom: 0;
 }
 
-/* line 71, ../scss/_overrides.scss */
+/* line 75, ../scss/_overrides.scss */
 .post {
   margin: 0 0 40px 0;
 }
 
-/* line 74, ../scss/_overrides.scss */
+/* line 78, ../scss/_overrides.scss */
 .entry-meta {
   margin-bottom: 20px;
   line-height: 150%;
 }
 
-/* line 78, ../scss/_overrides.scss */
+/* line 82, ../scss/_overrides.scss */
 .main-content {
   padding-top: 80px;
 }
 @media only all and (max-width: 1199px) {
-  /* line 78, ../scss/_overrides.scss */
+  /* line 82, ../scss/_overrides.scss */
   .main-content {
     padding-top: 70px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 78, ../scss/_overrides.scss */
+  /* line 82, ../scss/_overrides.scss */
   .main-content {
     padding-top: 60px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 78, ../scss/_overrides.scss */
+  /* line 82, ../scss/_overrides.scss */
   .main-content {
     padding-top: 160px;
   }
 }
 
-/* line 91, ../scss/_overrides.scss */
+/* line 95, ../scss/_overrides.scss */
 .content {
   margin-left: 15px;
   margin-right: 15px;
 }
 @media only all and (max-width: 767px) {
-  /* line 91, ../scss/_overrides.scss */
+  /* line 95, ../scss/_overrides.scss */
   .content {
     margin-left: 0;
     margin-right: 0;
   }
 }
 
-/* line 103, ../scss/_overrides.scss */
+/* line 107, ../scss/_overrides.scss */
 .image img {
   width: 100% !important;
   height: auto !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 100, ../scss/_overrides.scss */
+  /* line 104, ../scss/_overrides.scss */
   .image {
     width: 100%;
   }
-  /* line 110, ../scss/_overrides.scss */
+  /* line 114, ../scss/_overrides.scss */
   .image img {
     width: 100% !important;
   }
 }
 
-/* line 116, ../scss/_overrides.scss */
+/* line 120, ../scss/_overrides.scss */
 .sidebar {
   padding: 20px;
   margin-top: 20px;
   background-color: black;
 }
-/* line 122, ../scss/_overrides.scss */
+/* line 126, ../scss/_overrides.scss */
 .sidebar h3 {
   padding: 0 0 10px;
   margin: 0 !important;
 }
-/* line 126, ../scss/_overrides.scss */
+/* line 130, ../scss/_overrides.scss */
 .sidebar .nav > li > a {
   padding: 10px 0;
 }
 
-/* line 131, ../scss/_overrides.scss */
+/* line 135, ../scss/_overrides.scss */
 .row-thumbnails {
   margin-left: -15px;
   margin-right: -15px;
 }
 
-/* line 135, ../scss/_overrides.scss */
+/* line 139, ../scss/_overrides.scss */
 .thumbnail {
   min-height: 285px;
   padding: 0;
@@ -348,20 +354,20 @@ article {
   transition: all, 0s;
 }
 @media only all and (min-width: 768px) and (max-width: 991px) {
-  /* line 135, ../scss/_overrides.scss */
+  /* line 139, ../scss/_overrides.scss */
   .thumbnail {
     min-height: 250px;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 135, ../scss/_overrides.scss */
+  /* line 139, ../scss/_overrides.scss */
   .thumbnail {
     width: 100%;
     clear: both;
     min-height: 0;
   }
 }
-/* line 154, ../scss/_overrides.scss */
+/* line 158, ../scss/_overrides.scss */
 .thumbnail h3 {
   -webkit-transition: background-color, 0.5s;
   -moz-transition: background-color, 0.5s;
@@ -372,27 +378,27 @@ article {
   -o-transition: padding, 0.5s;
   transition: padding, 0.5s;
 }
-/* line 158, ../scss/_overrides.scss */
+/* line 162, ../scss/_overrides.scss */
 .thumbnail img {
   height: auto !important;
 }
 @media only all and (max-width: 767px) {
-  /* line 158, ../scss/_overrides.scss */
+  /* line 162, ../scss/_overrides.scss */
   .thumbnail img {
     width: 100% !important;
   }
 }
-/* line 166, ../scss/_overrides.scss */
+/* line 170, ../scss/_overrides.scss */
 .thumbnail .thumb-content {
   background-color: black;
 }
-/* line 170, ../scss/_overrides.scss */
+/* line 174, ../scss/_overrides.scss */
 .thumbnail .caption {
   text-align: center;
   padding: 10px 0 0 0;
 }
 @media only all and (min-width: 768px) {
-  /* line 183, ../scss/_overrides.scss */
+  /* line 187, ../scss/_overrides.scss */
   .thumbnail:hover h3 {
     background: #0074a2;
     padding-top: 20px;
@@ -407,7 +413,7 @@ article {
   }
 }
 
-/* line 193, ../scss/_overrides.scss */
+/* line 197, ../scss/_overrides.scss */
 .modal {
   top: 10%;
 }
@@ -1409,46 +1415,58 @@ code, pre, .highlight {
 .mq-list .smartphone {
   width: 8.1%;
 }
-@media only all and (max-width: 1199px) {
+@media only all and (min-width: 480px) and (max-width: 767px) {
   /* line 159, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8%;
   }
 }
-/* line 165, ../scss/custom.scss */
-.mq-list .tablet {
-  width: 19.4%;
+@media only all and (max-width: 767px) {
+  /* line 159, ../scss/custom.scss */
+  .mq-list .smartphone {
+    width: 8.1%;
+  }
 }
 /* line 168, ../scss/custom.scss */
+.mq-list .tablet {
+  width: 19.5%;
+}
+@media only all and (max-width: 767px) {
+  /* line 168, ../scss/custom.scss */
+  .mq-list .tablet {
+    width: 19.4%;
+  }
+}
+/* line 174, ../scss/custom.scss */
 .mq-list .netbook {
   width: 25.9%;
 }
-/* line 171, ../scss/custom.scss */
+/* line 177, ../scss/custom.scss */
 .mq-list .desktop {
   margin-right: 0;
   width: 40.5%;
 }
 
-/* line 178, ../scss/custom.scss */
+/* line 184, ../scss/custom.scss */
 .entry-content p {
   margin-bottom: 15px;
 }
-/* line 181, ../scss/custom.scss */
+/* line 187, ../scss/custom.scss */
 .entry-content img {
   margin: 10px 0 30px;
 }
 
-/* line 186, ../scss/custom.scss */
+/* line 192, ../scss/custom.scss */
 .media, .description {
   margin-bottom: 30px;
 }
 
-/* line 189, ../scss/custom.scss */
+/* line 195, ../scss/custom.scss */
 .media img {
   margin: 0;
 }
 
-/* line 193, ../scss/custom.scss */
+/* line 199, ../scss/custom.scss */
 .single-design .media {
   border: 1px solid black;
 }
@@ -1456,7 +1474,7 @@ code, pre, .highlight {
 /*
  *  Admin Menu 
  */
-/* line 203, ../scss/custom.scss */
+/* line 209, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
@@ -1464,11 +1482,11 @@ code, pre, .highlight {
 /* 
  *  Footer
  */
-/* line 211, ../scss/custom.scss */
+/* line 217, ../scss/custom.scss */
 #root-footer, #footer {
   height: 30px;
 }
-/* line 213, ../scss/custom.scss */
+/* line 219, ../scss/custom.scss */
 #root-footer p, #footer p {
   color: #666;
 }
