--- a/assets/scss/_overrides.scss
+++ b/assets/scss/_overrides.scss
@@ -44,8 +44,8 @@ time {
     color: #999;
 }
 table {
-    border-spacing: 0;
-    border-color: transparent;
+    border-spacing: 0 !important;
+    border-color: transparent !important;
 }
 
 // Structure
