--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -142,7 +142,7 @@
 }
 
 /* Affix */
-#home .affix {
+/* #home .affix {
     width: 100%;
     top: 0;
 }
@@ -157,17 +157,17 @@
 #standard .affix-top {
     width: 100%;
     position: fixed;
-}
+} */
 
 /* Responsive: Portrait mobile and below */
 @media screen and (max-width: 768px) {
 
-    .affix-top {
+    /* .affix-top {
         width:      100%;
         position:   fixed;
         top:        0;
         margin-top: 0;
-    }
+    } */
     /* Logo */
     .navbar-brand {
         padding-left: 15px;
