--- a/assets/scss/_overrides.scss
+++ b/assets/scss/_overrides.scss
@@ -1,58 +1,14 @@
 @import "vars";
 @import "mixins";
 
-// Links
 
-:focus, a:focus {
-    outline: -webkit-focus-ring-color auto 0;
-}
-
-a{
-    color: $blue;
-    &:hover {
-        color: $cyan;
-    }
-}
-a:hover {
-    text-decoration: none !important;
-}
-.btn {
-    // margin: 30px 0;
-    a {
-        text-transform: uppercase;
-        color: white;
-        &:hover {
-            color: white;
-            text-decoration: none;
-        }
-    }
-}
-
-// Type
-
-code {
-    @extend %darkBg;
-}
-pre, .highlight {
-    @extend %darkBg;
-}
-pre {
-    color: #666;
-    margin: 30px 0;
-}
-time {
-    color: #999;
-}
-table {
-    border-spacing: 0 !important;
-    border-color: transparent !important;
-}
-
-// Structure
+/* 
+ *  Elements
+ */
 
 body {
     overflow-x: hidden;
-    background-color:   darken($blue, 17%);
+    background-color: darken($blue, 17%);
     @include background(image-url("bg/stripes.png") #000 fixed);
 }
 article {
@@ -100,7 +56,6 @@ article {
         margin-right: 0;
     }
 }
-
 .image {
      @if $use_shadows { @extend %boxShadow; }
 
@@ -117,6 +72,10 @@ article {
     }
 }
 
+/* 
+ *  Sidebar
+ */
+
 .sidebar {
     // @if $use_shadows { @extend %boxShadow; }
     padding: 20px;
@@ -131,6 +90,11 @@ article {
         padding: 10px 0;
     }
 }
+
+/* 
+ *  Thumbnails
+ */
+
 
 .row-thumbnails {
     margin-left: -15px;
@@ -196,4 +160,53 @@ article {
 
 .modal {
     top: 10%;
+}
+
+
+
+// Links
+
+:focus, a:focus {
+    outline: -webkit-focus-ring-color auto 0;
+}
+
+a{
+    color: $blue;
+    &:hover {
+        color: $cyan;
+    }
+}
+a:hover {
+    text-decoration: none !important;
+}
+.btn {
+    // margin: 30px 0;
+    a {
+        text-transform: uppercase;
+        color: white;
+        &:hover {
+            color: white;
+            text-decoration: none;
+        }
+    }
+}
+
+// Type
+
+code {
+    @extend %darkBg;
+}
+pre, .highlight {
+    @extend %darkBg;
+}
+pre {
+    color: #666;
+    margin: 30px 0;
+}
+time {
+    color: #999;
+}
+table {
+    border-spacing: 0 !important;
+    border-color: transparent !important;
 }
