--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1499,7 +1499,7 @@ code, pre, .highlight {
 }
 /* line 207, ../scss/custom.scss */
 .media object {
-  margin-right: 20px;
+  margin-right: 20px !important;
 }
 
 /* line 211, ../scss/custom.scss */
