--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -205,7 +205,7 @@ time, mark, audio, video {
         margin: 0;
     }
     object {
-        margin-right: 20px;
+        margin-right: 20px !important;
     }
 }
 .single-design .media {
