--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -206,6 +206,7 @@ time, mark, audio, video {
     }
     object {
         margin-right: 5px !important;
+        margin-bottom: 5px !important;
     }
 }
 .single-design .media {
