added buttons for responsive: visit site, view templates

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -185,7 +185,7 @@ code, pre, .highlight {
 /* line 9, ../scss/_overrides.scss */
 body {
   overflow-x: hidden;
-  background-color: #00364b;
+  background-color: #d2322d;
   background: url('/wp-content/themes/jn-wpbs/assets/img/bg/stripes.png?1385804855') black fixed;
 }
 
