added margin-right to button

--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -130,6 +130,9 @@
 
 /* Buttons */
 
+button {
+    margin-right: 10px !important;
+}
 .btn-primary {
     background-color: $blue;
     border-color: $blue;
